--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ header{
 
 .topnav{
     display: inline-block;
-    margin: 8vh 0 0 0;
+    margin: 4vh 0 0 0;
     flex: 8;
 }
 
@@ -50,6 +50,22 @@ header{
 
 .active{
     color: rgba(227, 242, 253, 1)!important;
+}
+
+.nav-options{
+
+}
+
+#messages{
+    font-size: 2rem;
+}
+
+#signout{
+    font-size: 2rem;
+}
+
+.head-options{
+    flex:1;
 }
 /*
 =======================================================================
@@ -113,14 +129,67 @@ main{
     border-bottom: 1px solid rgb(227, 242, 253);
 }
 
-.main-bar{
-    flex:7;
-    margin-top: -21px;
+.widgets{
+    margin-top: 20px;
+    padding: 20px;
+    display: grid;
+    grid-gap: 0.7rem;
+    grid-template-columns: repeat(2, 1fr);
 }
 
-.main-container{
-    background: white;
-    height: 1000px;
+.w-item{
+    width: 100px;
+    background: #0d47a1;
+    text-align: center;
+    padding: 40px 0;
+    margin: 10px;
+    color: #E3F2FD;
+    cursor: pointer;
+}
+
+.w-item:hover{
+    transition: all 0.5s ease-out;
+    background: #0d58e8;
+}
+
+.main-bar{
+    background: #FFF;
+    flex:7;
+    padding: 20px;
+    min-height: 1000px;
+    color: #0d47a1;
+}
+
+.first-container{
+    display: flex;
+    flex-direction: row;
+    /*border: 3px solid #0d47a1;*/
+    padding: 10px;
+}
+
+.article-block{
+    /*border: 1px solid #0d47a1;*/
+    margin: 10px;
+    padding: 10px;
+}
+
+.statistic-block{
+    flex: 2;
+}
+
+.settings-block{
+    flex: 1;
+}
+
+.second-container{
+    display: flex;
+    flex-direction: row;
+    /*border: 3px solid #0d47a1;*/
+    padding: 10px;
+}
+
+.rating-block, .additional-block, .access-block{
+    flex: 1;
 }
 
 .opt-bar{
@@ -136,7 +205,6 @@ footer{
     width: 100%;
     background: #0d47a1;
     color: #fff;
-    margin-top: 65vh;
 }
 
 .footer-container{
@@ -224,6 +292,11 @@ footer span{
     .topnav{
         margin: 5vh 0 0 0;
     }
+
+    .widgets{
+        margin-top: 100px;
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 
@@ -262,6 +335,10 @@ footer span{
 
     .topnav{
         margin: 6vh 0 0 0;
+    }
+
+    .widgets{
+        margin-top: 60px;
     }
 }
 
